--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,89 +1,166 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css-ardan.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+        }
+        #myDiv01 {
+            margin-top: 20px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            max-width: 400px;
+        }
+    </style>
 </head>
 
 <body>
-    <h2 align="center">t1a18 Extend Class Demo</h2>
+    <h2 align="center">Animal Class Complex Demonstration</h2>
 
     <script>
         // Base class representing an Animal
         class MyAnimal {
-            constructor(passName, passAge) {
-                this.myName = passName;
-                this.myAge = passAge;
+            constructor(name, age, habitat) {
+                this.myName = name;
+                this.myAge = age;
+                this.habitat = habitat;
             }
+
+            makeSound() {
+                return 'Some generic animal sound';
+            }
+
+            eat() {
+                return `${this.myName} is eating.`;
+            }
+
+            toString() {
+                return `${this.myName} is a ${this.myAge} year old animal living in the ${this.habitat}.`;
+            }
+            
             myShow() {
-                document.getElementById('myDiv01').innerHTML += 'Hello ' + this.myName + '<br>';
+                document.getElementById('myDiv01').innerHTML += this.toString() + '<br>';
             }
         } // end class MyAnimal
 
         // Extended class for a Cat
         class MyCat extends MyAnimal {
+            constructor(name, age) {
+                super(name, age, "house");
+            }
+
+            makeSound() {
+                return 'Meow!';
+            }
+
             myShow() {
-                document.getElementById('myDiv01').innerHTML += this.myName + ' is a great cat <br>';
+                super.myShow();
+                document.getElementById('myDiv01').innerHTML += this.myName + ' says: ' + this.makeSound() + '<br>';
             }
         } // end extended class MyCat
 
         // Extended class for a Dog
         class MyDog extends MyAnimal {
+            constructor(name, age) {
+                super(name, age, "house");
+            }
+
+            makeSound() {
+                return 'Woof!';
+            }
+
             myShow() {
-                document.getElementById('myDiv01').innerHTML += this.myName + ' is a loyal dog <br>';
+                super.myShow();
+                document.getElementById('myDiv01').innerHTML += this.myName + ' says: ' + this.makeSound() + '<br>';
             }
         } // end extended class MyDog
 
         // Extended class for a Bird
         class MyBird extends MyAnimal {
+            constructor(name, age) {
+                super(name, age, "sky");
+            }
+
+            makeSound() {
+                return 'Chirp!';
+            }
+
             myShow() {
-                document.getElementById('myDiv01').innerHTML += this.myName + ' can sing beautifully <br>';
+                super.myShow();
+                document.getElementById('myDiv01').innerHTML += this.myName + ' says: ' + this.makeSound() + '<br>';
             }
         } // end extended class MyBird
 
         // Extended class for a Fish
         class MyFish extends MyAnimal {
+            constructor(name, age) {
+                super(name, age, "water");
+            }
+
+            makeSound() {
+                return 'Glub!';
+            }
+
             myShow() {
-                document.getElementById('myDiv01').innerHTML += this.myName + ' swims gracefully <br>';
+                super.myShow();
+                document.getElementById('myDiv01').innerHTML += this.myName + ' says: ' + this.makeSound() + '<br>';
             }
         } // end extended class MyFish
 
         // Extended class for a Rabbit
         class MyRabbit extends MyAnimal {
+            constructor(name, age) {
+                super(name, age, "meadow");
+            }
+
+            makeSound() {
+                return 'Squeak!';
+            }
+
             myShow() {
-                document.getElementById('myDiv01').innerHTML += this.myName + ' hops around happily <br>';
+                super.myShow();
+                document.getElementById('myDiv01').innerHTML += this.myName + ' says: ' + this.makeSound() + '<br>';
             }
         } // end extended class MyRabbit
+
+        // Factory function to create an animal
+        function createAnimal(type, name, age) {
+            switch(type) {
+                case 'Cat':
+                    return new MyCat(name, age);
+                case 'Dog':
+                    return new MyDog(name, age);
+                case 'Bird':
+                    return new MyBird(name, age);
+                case 'Fish':
+                    return new MyFish(name, age);
+                case 'Rabbit':
+                    return new MyRabbit(name, age);
+                default:
+                    return null;
+            }
+        }
     </script>
 
-    <input type="button" value="Example Class Set and Show Class Animal" onClick="{
-        myDog = new MyAnimal('Snickers', 5);
-        myDog.myShow();
-    }"><br><br>
+    <input type="text" id="animalType" placeholder="Enter animal type (Cat, Dog, Bird, Fish, Rabbit)">
+    <input type="text" id="animalName" placeholder="Enter animal name">
+    <input type="number" id="animalAge" placeholder="Enter animal age" min="1">
+    <input type="button" value="Create Animal" onClick="{
+        const type = document.getElementById('animalType').value;
+        const name = document.getElementById('animalName').value;
+        const age = document.getElementById('animalAge').value;
 
-    <input type="text" id="myText01" value="may be useful later"><br>
-
-    <input type="button" value="Example Extend Class Animal as Cat" onClick="{
-        myPet = new MyCat('Fluffy', 14);
-        myPet.myShow();
-    }"><br><br>
-
-    <input type="button" value="Example Extend Class Animal as Dog" onClick="{
-        myDog = new MyDog('Buddy', 3);
-        myDog.myShow();
-    }"><br><br>
-
-    <input type="button" value="Example Extend Class Animal as Bird" onClick="{
-        myBird = new MyBird('Tweety', 2);
-        myBird.myShow();
-    }"><br><br>
-
-    <input type="button" value="Example Extend Class Animal as Fish" onClick="{
-        myFish = new MyFish('Goldie', 1);
-        myFish.myShow();
-    }"><br><br>
-
-    <input type="button" value="Example Extend Class Animal as Rabbit" onClick="{
-        myRabbit = new MyRabbit('Snowball', 4);
-        myRabbit.myShow();
+        if (type && name && age > 0) {
+            let animal = createAnimal(type, name, parseInt(age));
+            if (animal) {
+                animal.myShow();
+            } else {
+                alert('Invalid animal type. Please enter Cat, Dog, Bird, Fish, or Rabbit.');
+            }
+        } else {
+            alert('Please fill in all fields correctly.');
+        }
     }"><br><br>
 
     <div id="myDiv01">...</div>
